--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -110,6 +110,23 @@ body{
      height: 280px;
      width:230px ;
 }
+.games3{
+     height: 280px;
+     width:230px ;
+     background-image: url(../images/play.jpg);
+}
+.games img{
+     position: relative;
+     width: 30px;
+     height: 30px;
+     z-index: 60px;
+     margin: 0 0 30px 80px;
+     opacity: 0.0;
+}
+.games3:hover{
+     background-color: rgba(81, 78, 78, 0.069);
+     box-shadow: 3px;
+}
 .play{
      display: flex;
      align-items: center;
@@ -133,17 +150,20 @@ body{
      border-radius: 20px;
      background:white;
      border: 0;
-     color: black;
+     border-color: none;
      font-size: 15px;
      font-weight: 700;
      padding: 16px 35px; 
      display: flex;
      align-items: center;
+     gap: 10px;
 }
 .bttn:hover{
+     border-color: rgb(192, 46, 71);
+     border-radius: 20px;
      color: rgb(192, 46, 71);
-     background-color: rgb(235, 63, 149);
-     border-color: rgb(235, 63, 149);
+     background-color:rgb(216, 162, 171);
+     border-radius: rgb(204, 151, 177);
      text-emphasis-color: rgb(235, 63, 149);
 }
 
@@ -207,4 +227,60 @@ margin-left: 650px;
      text-align: center;
      justify-content: space-between;
      align-items: center;
+}
+@media screen and (max-width: 576px) {
+     .logo{
+          display: grid;
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .menu ul{
+          display: grid;
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .banner-img{
+          width: 100%;
+     }
+     .banner-descript{
+          display: grid;
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .button{
+         display: grid;
+         grid-template-columns: repeat(1, 1fr);
+     }
+     .banner-img{
+          width: 100%;
+     }
+     .online{
+          display: grid;
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .online-games img{
+          display: grid;
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .play{
+          display: grid;
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .play-container{
+          display: grid;
+          grid-template-columns: repeat(2,1fr);
+     }
+     .button-container{
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+     }
+     .logo1{
+          display: grid;
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .white > li{
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+     }
+     .grey > li{
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+     }
 }
